# dc-plugins

./: CLAUDE.md  INSTALL.md  README.md  make-fm-rcc.sh
.claude-plugin/: marketplace.json
fm-dc/: .gitignore  CLAUDE.md  README.md  SCOPE.md  requirements.txt
fm-dc/.claude-plugin/: plugin.json
fm-dc/agents/: fm-patch-builder.md  fm-xml-validator.md
fm-dc/commands/: fm-docs-sync.md  fm-init.md  fm-rollback.md  fm-scaffold.md  fm-status.md
fm-dc/docs/design-notes/: filemaker-xml-export-patching-harness.md
fm-dc/docs/guides/: remote-file-agent-workflow.md
fm-dc/resources/: fmbase.fmp12
fm-dc/skills/ddr/: SKILL.md
fm-dc/skills/fm-admin/: SKILL.md
fm-dc/skills/fm-connections/: SKILL.md
fm-dc/skills/fm-core/: SKILL.md
fm-dc/skills/fm-dataapi/: SKILL.md
fm-dc/skills/fm-docs/: SKILL.md
fm-dc/skills/fm-odata/: SKILL.md
fm-dc/skills/fm-patch/: SKILL.md
fm-dc/skills/fm-proofkit/: SKILL.md
fm-dc/skills/fm-scripts/: SKILL.md
fm-dc/templates/: agent-saxml-export-v5.xml  agent-saxml-export.template.xml  saxml-table.xml
fm-dc/tests/: prompt-battery.md  test_doctor.py  test_fms_admin.py  test_sync_claris_docs.py
fm-dc/tools/: doctor.py
fm-dc/tools/fmlint/fmlint/: LICENSE  VENDOR.md  __init__.py  __main__.py  catalog.py  context.py  engine.py  pyproject.toml  types.py
fm-dc/tools/fmlint/fmlint/formats/: detect.py  hr_parser.py  xml_parser.py
fm-dc/tools/fmlint/fmlint/rules/: __init__.py  documentation.py  live_eval.py  naming.py
pm/: README.md
pm/.claude-plugin/: plugin.json
pm/commands/: pm-scaffold.md
pm/template/: CLAUDE.md  README.md
(+102 files in other folders)
